# resonate

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  pyproject.toml  seed.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  client.py  contract.py  invoice.py  technician.py  threat.py  ticket.py  user.py
backend/app/routers/: __init__.py  ai.py  auth.py  clients.py  finance.py  netops.py  tickets.py
backend/app/schemas/: client.py  contract.py  invoice.py  technician.py  threat.py  ticket.py  user.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/(modules)/contracts/: page.tsx
src/app/(modules)/crm/: page.tsx
src/app/(modules)/finance/: page.tsx
src/app/(modules)/netops/: page.tsx
src/app/(modules)/procurement/: page.tsx
src/app/(modules)/security/: page.tsx
src/app/(modules)/service-desk/: page.tsx
src/app/(modules)/service-desk/tech/[id]/: page.tsx
src/app/api/health/: route.ts
src/app/login/: page.tsx
src/components/dashboard/: AIInsight.tsx  ModuleCard.tsx
src/components/layout/: AppShell.tsx  RZStatusBadge.tsx
src/components/service-desk/: SLATimer.tsx  TicketCard.tsx
src/lib/: api.ts  auth-context.tsx  constants.ts  types.ts
src/lib/mock-data/: contracts.ts  crm.ts  finance.ts  netops.ts  procurement.ts  security.ts  service-desk.ts
